[package]
authors = [
    "Kelly Thomas Kline <kellytk@sw-e.org>",
    "Samuel Rounce <me@samuelrounce.co.uk>"
]
categories = ["gui", "wasm", "web-programming"]
description = "Pictionary app in yew rust."
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
license = "MIT/Apache-2.0"
name = "picyew"
readme = "README.md"
repository = "https://github.com/deep-gaurav/deep-gaurav"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.18"
strum_macros = "0.18"
serde = "1"
serde_derive = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.13"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.17.2"
yew-router = "0.14.0"
serde_json = "1.0"
lazy_static = "1.4.0"
gloo = "0.2.1"
js-sys = "0.3.42"
itertools = "0.9.0"
bincode = "1.3.1"
regex = "1.3.9"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'HtmlInputElement',
  'RtcIceConnectionState',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'DomRect',
  'TouchEvent',
  'TouchList',
  'Touch',
  'BinaryType',
  'HtmlAudioElement'
]
